Store less info about free badges that aren't associated with valuable ones
